<resources>
    <string name="app_name">MobilBanking</string>
    <string name="login">Login</string>
    <string name="phone">phone</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ok">Ok</string>
    <string name="forgot_password">forgot password?</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="verify">Verify</string>
    <string name="password">password</string>
    <string name="resend_sms">resend sms?</string>
    <string name="logout">Logout</string>
    <string name="code">Code</string>
    <string name="phone_number">Phone number</string>
    <string name="registration">registration</string>
    <string name="password_">Password</string>
    <string name="reset">Reset</string>
    <string name="next">next</string>
    <string name="send_sms_again">Send sms again</string>
    <string name="registration_">Registration</string>
    <string name="lastname">Lastname</string>
    <string name="help">Help</string>
    <string name="contact_by_phone">Contact by phone</string>
    <string name="_998_97_535_17_17">+998 (97) 535-17-17</string>
    <string name="write_to_us">Write to us</string>
    <string name="talabaomonturdiyeva_gmail_com">talabaomonturdiyeva@gmail.com</string>
    <string name="name">Name</string>
    <string name="old_password">Old password</string>
    <string name="upload_your_picture">Upload your picture</string>
    <string name="save">save</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="personal_information">Personal information</string>
    <string name="support">Support</string>
    <string name="your_number">Your number:</string>
    <string name="easy_access">Easy access</string>
    <string name="face_unlock_fingerprint_login">Face Unlock / Fingerprint Login</string>
    <string name="face_or_fingerprint_identification_allows_easy_login_and_other_operations">Face or fingerprint identification allows easy login and other operations</string>
    <string name="trusted_device">Trusted Device</string>
    <string name="change_password">Change password</string>
    <string name="enter_the_pin_code">Enter the PIN code</string>
    <string name="change_pin">Change PIN</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="delete">delete</string>
    <string name="change_color">change color</string>
    <string name="incomes">Incomes</string>
    <string name="outcomes">outcomes</string>
    <string name="all_history">All history</string>
    <string name="cancel">cancel</string>
    <string name="select_color_card">Select color card</string>
    <string name="set_card_color">Set card color</string>
    <string name="card">CARD</string>
    <string name="uzcard">UZCARD</string>
    <string name="uzs">UZS</string>
    <string name="add_your_card_here">Add your card here</string>
    <string name="_0000">0000</string>
    <string name="star_text">*</string>
    <string name="cards">Cards</string>
    <string name="your_bank">Your bank</string>
    <string name="enter_sms_kod">Enter sms kod</string>
    <string name="add_card">Add card</string>
    <string name="card_number">Card number</string>
    <string name="validity">Validity</string>
    <string name="card_name">Card name</string>
    <string name="make_the_card_basic">Make the card basic</string>
</resources>