<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container_all_cards"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_24sdp"
    tools:context=".ui.screen.auth.ResetScreen">

    <FrameLayout style="@style/match_match">

        <FrameLayout style="@style/match_match">

            <ScrollView style="@style/match_wrap">

                <LinearLayout
                    style="@style/match_wrap"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/app_b"
                        style="@style/app_b"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/app_b_description"
                            android:text="@string/reset_password" />
                    </FrameLayout>

                    <View
                        style="@style/app_b_liner"
                        app:layout_constraintTop_toBottomOf="@id/app_b" />

                    <TextView
                        android:id="@+id/t_v_phone_number"
                        style="@style/wrap_wrap"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/phone_number" />

                    <br.com.sapereaude.maskedEditText.MaskedEditText
                        android:id="@+id/m_e_t_edit_phone_user"
                        style="@style/met_phone"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        app:mask="+998 ## ### ## ##"
                        mask:allowed_chars="1234567890" />

                    <TextView
                        android:id="@+id/t_v_error_phone"
                        style="@style/tv_error"
                        app:layout_constraintLeft_toLeftOf="@id/m_e_t_edit_phone_user"
                        app:layout_constraintTop_toBottomOf="@id/m_e_t_edit_phone_user" />

                    <LinearLayout
                        android:id="@+id/line_new_password"
                        style="@style/match_wrap"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/t_v_error_phone">

                        <TextView
                            android:id="@+id/t_v_password"
                            style="@style/wrap_wrap"
                            android:text="@string/new_password" />

                        <EditText
                            android:id="@+id/e_t_edit_password_user"
                            style="@style/ed_t_password"
                            android:textColor="@color/teal_500"
                            tools:ignore="TextFields" />

                        <TextView
                            android:id="@+id/t_v_error_password"
                            style="@style/tv_error" />

                        <TextView
                            android:id="@+id/t_v_confirm_password"
                            style="@style/wrap_wrap"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:text="@string/confirm_password" />

                        <EditText
                            android:id="@+id/e_t_edit_confirm_password_user"
                            style="@style/ed_t_password"
                            tools:ignore="TextFields" />

                        <TextView
                            android:id="@+id/t_v_error_confirm_password"
                            style="@style/tv_error" />

                        <TextView
                            android:id="@+id/t_v_code"
                            style="@style/wrap_wrap"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:text="@string/enter_sms_kod" />

                        <br.com.sapereaude.maskedEditText.MaskedEditText
                            android:id="@+id/m_e_t_edit_code_user"
                            style="@style/met_verify_code"
                            mask:allowed_chars="1234567890"
                            mask:mask="## ## ##" />

                        <TextView
                            android:id="@+id/t_v_error_code"
                            style="@style/tv_error"
                            android:layout_gravity="center" />

                        <Button
                            android:id="@+id/btn_resend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:background="@color/white"
                            android:enabled="false"
                            android:text="@string/send_sms_again"
                            android:textColor="@color/teal_300"
                            android:textSize="10sp"
                            app:backgroundTint="@null" />

                        <TextView
                            android:id="@+id/t_v_timer"
                            style="@style/tv_error"
                            android:layout_gravity="center" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/btn_reset"
                style="@style/btn_bottom"
                android:text="@string/ok"
                app:backgroundTint="@null" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <androidx.core.widget.ContentLoadingProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>
</androidx.cardview.widget.CardView>