<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container_all_cards"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_24sdp"
    tools:context=".ui.screen.auth.RegisterScreen">

    <FrameLayout style="@style/match_match">

        <FrameLayout style="@style/match_match">

            <ScrollView style="@style/match_wrap">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/match_wrap">

                    <FrameLayout
                        android:id="@+id/app_b"
                        style="@style/app_b"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/app_b_description"
                            android:text="@string/registration_" />
                    </FrameLayout>

                    <View
                        style="@style/app_b_liner"
                        app:layout_constraintTop_toBottomOf="@id/app_b"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/t_v_firstname"
                        style="@style/wrap_wrap"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/firstname"
                        app:layout_constraintLeft_toLeftOf="@id/app_b"
                        app:layout_constraintTop_toBottomOf="@id/app_b" />

                    <EditText
                        android:id="@+id/e_t_edit_firstname_user"
                        style="@style/ed_t_user_name"
                        app:layout_constraintLeft_toLeftOf="@id/t_v_firstname"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/t_v_firstname" />

                    <TextView
                        android:id="@+id/t_v_error_firstname"
                        style="@style/tv_error"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_firstname_user"
                        app:layout_constraintTop_toBottomOf="@id/e_t_edit_firstname_user" />


                    <TextView
                        android:id="@+id/t_v_lastname"
                        style="@style/wrap_wrap"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/lastname"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_firstname_user"
                        app:layout_constraintTop_toBottomOf="@id/e_t_edit_firstname_user" />

                    <EditText
                        android:id="@+id/e_t_edit_lastname_user"
                        style="@style/ed_t_user_name"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_firstname_user"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/t_v_lastname" />

                    <TextView
                        android:id="@+id/t_v_error_lastname"
                        style="@style/tv_error"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_lastname_user"
                        app:layout_constraintTop_toBottomOf="@id/e_t_edit_lastname_user" />

                    <TextView
                        android:id="@+id/t_v_phone_number"
                        style="@style/wrap_wrap"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/phone_number"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/e_t_edit_lastname_user" />

                    <br.com.sapereaude.maskedEditText.MaskedEditText
                        android:id="@+id/m_e_t_edit_phone_user"
                        style="@style/met_phone"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/t_v_phone_number"
                        app:mask="+998 ## ### ## ##"
                        mask:allowed_chars="1234567890" />

                    <TextView
                        android:id="@+id/t_v_error_phone"
                        style="@style/tv_error"
                        app:layout_constraintLeft_toLeftOf="@id/m_e_t_edit_phone_user"
                        app:layout_constraintTop_toBottomOf="@id/m_e_t_edit_phone_user" />

                    <TextView
                        android:id="@+id/t_v_password"
                        style="@style/wrap_wrap"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/password_"
                        app:layout_constraintLeft_toLeftOf="@id/m_e_t_edit_phone_user"
                        app:layout_constraintTop_toBottomOf="@id/m_e_t_edit_phone_user" />

                    <EditText
                        android:id="@+id/e_t_edit_password_user"
                        style="@style/ed_t_password"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/t_v_password"
                        tools:ignore="TextFields" />

                    <TextView
                        android:id="@+id/t_v_error_password"
                        style="@style/tv_error"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_password_user"
                        app:layout_constraintTop_toBottomOf="@id/e_t_edit_password_user" />


                    <TextView
                        android:id="@+id/t_v_confirm_password"
                        style="@style/wrap_wrap"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/confirm_password"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_password_user"
                        app:layout_constraintTop_toBottomOf="@id/e_t_edit_password_user" />

                    <EditText
                        android:id="@+id/e_t_edit_confirm_password_user"
                        style="@style/ed_t_password"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_password_user"
                        app:layout_constraintRight_toRightOf="@id/e_t_edit_password_user"
                        app:layout_constraintTop_toBottomOf="@id/t_v_confirm_password"
                        tools:ignore="TextFields" />

                    <TextView
                        android:id="@+id/t_v_error_confirm_password"
                        style="@style/tv_error"
                        app:layout_constraintLeft_toLeftOf="@id/e_t_edit_confirm_password_user"
                        app:layout_constraintTop_toBottomOf="@id/e_t_edit_confirm_password_user" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <Button
                android:id="@+id/btn_register"
                style="@style/btn_bottom"
                android:text="@string/registration"
                app:backgroundTint="@null" />
        </FrameLayout>

        <include
            android:id="@+id/progress"
            layout="@layout/view_progress_all_windows"
            android:visibility="gone" />
    </FrameLayout>
</androidx.cardview.widget.CardView>