<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16sdp"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_24sdp"
    tools:context=".ui.screen.setting.SupportScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/app_b"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_8sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/img_btnClose"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/support"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/grey_700"
                app:layout_constraintTop_toBottomOf="@id/app_b" />

            <LinearLayout
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp">

                <ImageButton
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:background="@drawable/background_custom_edittext"
                    android:clickable="false"
                    android:src="@drawable/ic_phone" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_by_phone"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_998_97_535_17_17" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/write_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp">

                <ImageButton
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:background="@drawable/background_custom_edittext"
                    android:clickable="false"
                    android:src="@drawable/ic_email" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/write_to_us"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/talabaomonturdiyeva_gmail_com" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>