<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/container_all_cards"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_24sdp"
    tools:context=".ui.screen.auth.VerifyScreen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/app_b"
                style="@style/app_b"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/app_b_description"
                    android:text="@string/verify" />
            </FrameLayout>

            <View
                style="@style/app_b_liner"
                app:layout_constraintTop_toBottomOf="@id/app_b"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/t_v_code"
                style="@style/wrap_wrap"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/enter_sms_kod"
                app:layout_constraintBottom_toTopOf="@id/m_e_t_edit_code_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/m_e_t_edit_code_user"
                style="@style/met_verify_code"
                app:layout_constraintBottom_toTopOf="@id/t_v_error_code"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                mask:allowed_chars="1234567890"
                mask:mask="### ###" />

            <TextView
                android:id="@+id/t_v_error_code"
                style="@style/tv_error"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_8sdp"
                app:layout_constraintBottom_toTopOf="@id/btn_resend"
                app:layout_constraintLeft_toLeftOf="@id/m_e_t_edit_code_user" />

            <Button
                android:id="@+id/btn_resend"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/send_sms_again"
                android:textColor="@color/teal_300"
                android:textSize="10sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/t_v_timer"
                style="@style/wrap_wrap"
                android:layout_marginTop="@dimen/_1sdp"
                android:textColor="@color/red_400"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_resend" />

            <Button
                android:id="@+id/btn_verify"
                style="@style/btn_bottom"
                android:text="@string/next"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <androidx.core.widget.ContentLoadingProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>